hard-gists/3231186/run.log
=== Docker Run Log for 3231186 ===
Started at: Mi 29. Okt 13:47:32 CET 2025

[2025-10-29 13:47:33] START: Running container for 3231186
[2025-10-29 13:47:33] SUCCESS: Container 70222055b6e7f7f2f72d83e0ef5be27354be7231ad253f8ccc7de41edd2311ab started for 3231186
=== Container logs for 3231186 ===
  File "/snippet.py", line 39
    print "[congrid] dimensions error. " \
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3231186 ===
[2025-10-29 13:47:35] INFO: Container 70222055b6e7f7f2f72d83e0ef5be27354be7231ad253f8ccc7de41edd2311ab has stopped
